Fix for bug 558973 ("ASSERTION: Nodes that are not documents, document fragments or elements can't be parents!"). r=jst.

--HG--
extra : rebase_source : 6d9f76e94457823bb425f546053f4d24e80aec5c